--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -3,17 +3,17 @@
 
 \input{tex/appendix_trf.tex}
 
-\chapter{Comparison between data and prediction}
+\chapter{Comparison between Data and Prediction}
 \label{app:selection}
 
 \input{tex/appendix_selection.tex}
 
-\chapter{Unfolding details}
+\chapter{Unfolding Details}
 \label{app:unfolding}
 
 \input{tex/appendix_unfolding.tex}
 
-\chapter{Differential results}
+\chapter{Differential Results}
 \label{app:correlations}
 
 \input{tex/appendix_results.tex}
