--- a/tex/appendix_trf.tex
+++ b/tex/appendix_trf.tex
@@ -38,8 +38,11 @@ to one.  Figure \ref{fig:app:trfClosure} shows the result of this test.
 
 As it can be observed, there is a departure from the expected behavior
 in the edges of the distribution that amounts to up to 20\% in some
-regions of the light and c flavour.  Using the McAtNlo sample, an
-efficiency map has been derived in order to overcome this problem.
+regions of the light and c flavour.  In the analysis at \seventev{}, an
+efficiency map has been derived, using the \mcatnlo{} sample, in order
+to overcome this problem. In the analysis at \eighttev{}, the
+distributions are normalized to the number of events predicted by
+applying the actual tagging requirement.
 
 Figure \ref{fig:app:trfClosure} shows the result of the closure test
 on the derived efficiency map.  The derived efficiency map will
