--- a/tex/appendix_unfolding.tex
+++ b/tex/appendix_unfolding.tex
@@ -274,6 +274,7 @@ Fig.~\ref{fig:wnormincluvsmtt}.
 \end{figure}
 
 \subsection{Comparison of \mujets{} and \ejets{}}
+\label{app:unf:evsmu}
 
 The measured values for the nuisance parameters
 in the inclusive measurement at \eighttev{} are shown in
