--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -14,27 +14,27 @@ In the recent history of particle physics, asymmetries have been
 exploited to investigate the nature of the weak interaction. 
 Due to the parity violation typical of the weak
 interaction, processes show differences between particles and
-antiparticles, or between left--handed or right--handed particles.
+antiparticles, or between left--handed and right--handed particles.
 Various asymmetries have been studied at collider experiments in the
 last thirty years:
 
 \begin{itemize}
 \item A {\it charge asymmetry}  is defined as $A_{+-}=(N_+ -
   N_-)/(N_+ +N_-)$, where $N_+$ is the number of events with a
-  positively charged particle, and $N_-$ the number of events with a
-  negative particle. Charge asymmetries are used to measure CP
+  positively--charged particle, and $N_-$ the number of events with a
+  negatively--charged particle. Charge asymmetries are used to measure CP
   violation in meson decays~\cite{LHCb:2012fb}.
 \item A {\it left-right asymmetry} is defined as $A_{LR}=(N_L -
-  N_R)/(N_L +N_R)$, where $N_L$ is the number of events with a
-  left--polarized particle and $N_R$ the number of right--polarized
-  events. The left-right asymmetry in $Z$ boson production was
-  measured in 1992 at the Stanford Linear Collider of polarized and
+  N_R)/(N_L +N_R)$, where $N_L$ and $N_R$ are the number of events with a
+  left--polarized and a right--polarized particle, respectively. 
+  The left-right asymmetry in $Z$ boson production was
+  measured in 1992 at the Stanford Linear Collider using polarized and
   unpolarized electron beams~\cite{Elia:1993ka}.
 \item A {\it forward-backward asymmetry} is defined as $A_{FB}=(N_F -
   N_B)/(N_F +N_B)$, where $N_F$ is the number of events with a
   particle moving {\it forward} with respect to a chosen reference
   direction, and $N_B$ the number of {\it backward} events. A notable
-  example is the forward--backward asymmetry in $bbbar$ production
+  example is the forward--backward asymmetry in $\bbbar$ production
   measured at LEP~\cite{ALEPH:2005ab}.
 \end{itemize}
 
@@ -46,7 +46,7 @@ performed at center-of-mass energies between $35$ and $46.8\GeV{}$,
 showed how the asymmetry allows probing for new physics contributing at
 energy scales beyond direct reach. In this case, Fig.~\ref{fig:tasso}
 shows that, while the inclusive cross section measurements of
-$e^+e^-\to\mu^+\mu^-$ agree with the symmetric $QED$ description, a
+$e^+e^-\to\mu^+\mu^-$ agree with the symmetric QED description, a
 forward--backward asymmetry is induced by the interference with a
 virtual $Z$ boson discovered at a mass of $\sim 91\GeV{}$ in
 proton--antiproton collisions by the UA1 and UA2
@@ -140,7 +140,7 @@ publication of the results based on the 2012 dataset is expected by
 the end of 2014.
 The author also studied the phenomenology of the \ttbar{} charge
 asymmetry in collaboration with theorists J.A. Aguilar--Saavedra and
-E. \'Alvarez, resulting in two publications in the Physics Letters
+E. \'Alvarez, resulting in two publications in Physics Letters
 B~\cite{AguilarSaavedra:2011cp} and the Journal of High Energy
 Physics~\cite{Aguilar-Saavedra:2014vta}.
 
