--- a/tex/simulation.tex
+++ b/tex/simulation.tex
@@ -296,11 +296,11 @@ generators used in this dissertation.
 
 \subsubsection*{General-purpose generators}
 
-\paragraph{PYTHIA}~\cite{pythia6,pythia8} is a multi-purpose MC
+\paragraph{PYTHIA}~\cite{pythia6} is a multi-purpose MC
 generator using LO calculations for $2 \to n$ ($n\leq 3$) processes
 and PS with emissions ordered in transverse momentum. 
 The Lund string model is used for hadronization, and UE simulation is
-included.
+included. The \pythia{} version 6 is used.
 
 \paragraph{HERWIG}~\cite{herwig} is a multi-purpose MC generator using LO
 calculations for $2 \to 2$ processes and PS with emissions ordered in
